# 2Ddiffusion

./: CMakeLists.txt  README.md  diffusion.cpp  gl_test.cpp  main.cpp
field/: field_base.cpp  field_base.h
field/solver/: boundary_base.cpp  boundary_base.h  solver_base.cpp  solver_base.h
